@@ -1,5 +1,11 @@
 2012-01-31  Rene Liebscher <R.Liebscher@gmx.de>
 
+	* config_gram.y, lexer.l: removed unused ID/TKN_ID definitions
+	* config.[hc]: removed unused function id(), use value.type to select
+	               values
+
+2012-01-31  Rene Liebscher <R.Liebscher@gmx.de>
+
 	patch #7437 modifications to Bus Pirate module
 	patch #7686 Updating buspirate ascii mode to current firmware, use AUX
 	            as clock generator, and setting of serial receive timeout
